<resources>
    <string name="app_name">Orders</string>
    <string name="type_product_name">Type product name</string>
    <string name="type_price_product">Type price of product</string>
    <string name="type_stock_product">Type stock product</string>
    <string name="add_product">Add product</string>
    <string name="save_product">Save Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="product_stock">Product Stock</string>
    <string name="description">Description</string>
    <string name="product_category">product_Category</string>
    <string name="placa">Placa</string>
    <string name="descripcion_vehiculo">descripcion</string>
    <string name="numero_asiento">Numero Asiento</string>
    <string name="peso">Peso</string>
    <string name="estado">Estado</string>
    <string name="carga_maxima">Carga maxima</string>
    <string name="a_o_de_fabricaci_n">Año de fabricación</string>
    <string name="a_o_adquirido">Año adquirido</string>
    <string name="save_veh">Save Vehiculo</string>
    <string name="descrprion_vehiculo">Descrprion Vehiculo</string>
    <string name="placa_vehiculo">Placa</string>
    <string name="asientos">asientos</string>
    <string name="peso_vehiculo">Peso_vehiculo</string>
    <string name="estado_vehiculo">Estado_vehiculo</string>
    <string name="carga">Carga</string>
    <string name="fabricacion">Fabricacion</string>
    <string name="aquirido">Aquirido</string>
    <string name="date_submission">Date Submission</string>
    <string name="bibref">Bibref</string>
    <string name="user">User</string>
    <string name="figure">Figure</string>
    <string name="drawer">Drawer</string>
    <string name="code">Code</string>
    <string name="teo">Teo</string>
    <string name="save_figure">Save Figure</string>
</resources>
