<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_vehiculo">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/iv_width"
            android:layout_height="@dimen/iv_height"
            android:id="@+id/iv_vehiculo"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/iv_margin"
            />

        <TextView
            android:layout_width="@dimen/tv_width"
            android:layout_height="wrap_content"
            android:id="@+id/tv_descripcion"
            android:layout_toRightOf="@+id/iv_vehiculo"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/tv_size_name_product"
            android:text="@string/descrprion_vehiculo"

            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_edit_vehiculo"
            android:layout_toRightOf="@+id/tv_descripcion"
            android:src="@android:drawable/ic_menu_edit"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_placa"
            android:layout_below="@id/tv_descripcion"
            android:textSize="@dimen/tv_size_product_price"
            android:text="@string/placa_vehiculo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_asientos"
            android:layout_toRightOf="@+id/tv_descripcion"
            android:layout_below="@id/tv_placa"
            android:layout_marginLeft="@dimen/tv_margl_product_stock"
            android:textSize="@dimen/tv_size_product_stock"
            android:text="@string/asientos"
            android:layout_toLeftOf="@id/bt_edit_vehiculo"
            android:layout_toStartOf="@id/bt_edit_vehiculo"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_delete_vehiculo"
            android:layout_toRightOf="@+id/tv_asientos"
            android:layout_below="@+id/tv_descripcion"
            android:src="@android:drawable/ic_menu_delete"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_peso"
            android:layout_below="@id/tv_asientos"
            android:textSize="@dimen/tv_size_product_price"
            android:text="@string/peso_vehiculo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_estado"
            android:layout_below="@id/tv_peso"
            android:textSize="@dimen/tv_size_product_price"
            android:text="@string/estado_vehiculo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_carga"
            android:layout_below="@id/tv_estado"
            android:textSize="@dimen/tv_size_product_price"
            android:text="@string/carga"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_fabricacion"
            android:layout_below="@id/tv_carga"
            android:textSize="@dimen/tv_size_product_price"
            android:text="@string/fabricacion"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_aquirido"
            android:layout_below="@id/tv_fabricacion"
            android:textSize="@dimen/tv_size_product_price"
            android:text="@string/aquirido"
            />

    </RelativeLayout>

</android.support.v7.widget.CardView>