<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_product">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/iv_width"
        android:layout_height="@dimen/iv_height"
        android:id="@+id/iv_product"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/iv_margin"
        />

    <TextView
        android:layout_width="@dimen/tv_width"
        android:layout_height="wrap_content"
        android:id="@+id/tv_product_name"
        android:layout_toRightOf="@+id/iv_product"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/tv_size_name_product"
        android:text="@string/product_name"

        />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_edit_product"
            android:layout_toRightOf="@+id/tv_product_name"
            android:src="@android:drawable/ic_menu_edit"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_product_price"
            android:layout_toRightOf="@+id/iv_product"
            android:layout_below="@id/tv_product_name"
            android:textSize="@dimen/tv_size_product_price"
            android:text="@string/price"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_product_stock"
            android:layout_toRightOf="@+id/tv_product_price"
            android:layout_below="@id/tv_product_name"
            android:layout_marginLeft="@dimen/tv_margl_product_stock"
            android:textSize="@dimen/tv_size_product_stock"
            android:text="@string/product_stock"
            android:layout_toLeftOf="@id/bt_edit_product"
            android:layout_toStartOf="@id/bt_edit_product"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_delete_product"
            android:layout_toRightOf="@+id/tv_product_stock"
            android:layout_below="@+id/tv_product_price"
            android:src="@android:drawable/ic_menu_delete"
            />


    </RelativeLayout>

</android.support.v7.widget.CardView>